apps/homarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homarr
  labels:
    app: homarr
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: homarr
  type: ClusterIP
